--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background: url("../image_processing20201007-24969-1vu7ew0.png") no-repeat right center;
+    background: url("../team_bugcv_group_pic.png") no-repeat right center;
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
